data/derived/comb/progs/unify/prog4013.ml.out
Characters 8-9:
  getLast x;;
          ^
Error: This expression has type int list
       but an expression was expected of type 'a list list
       Type int is not compatible with type 'a list 
